--- a/bloco_3/dia_3/style.css
+++ b/bloco_3/dia_3/style.css
@@ -12,13 +12,16 @@
     }
 
     .padding {
+      padding: 20px;
     /* insira aqui um padding de 20px na classe abaixo para aplicá-lo aos itens B, C e D */
     }
 
-    .margin {
+    .margin{
+      margin: 30px;
     /* insira aqui uma margem de 30px na classe abaixo para aplicá-la aos itens C e D */
     }
 
     .border {
+      border: 5px solid black;
     /* insira aqui uma borda com valor '5px solid black' para aplicá-la ao item D */
     }
