--- a/bloco_06/dia_02/style.css
+++ b/bloco_06/dia_02/style.css
@@ -2,12 +2,12 @@ body{
   max-width: 60%;
   width: 100%;
   border: 40px auto;
-  background-color: antiquewhite;
+  background-color: rgb(0, 0, 0);
 }
 
 header, form{
-  background-color: rgb(233, 178, 107);
-  box-shadow:10px 5px 15px rgb(140, 150, 150);
+  background-color: rgb(235, 220, 173);
+  box-shadow:10px 5px 15px rgba(255, 255, 255, 0.315);
 }
 
 .espaco-botao{
